<resources>
    <string name="app_name">connectme</string>
    <string name="chat_icons">Chat icons</string>
    <string name="welcome">Welcome!</string>
    <string name="we_re_happy_to_see_you_please_login_to_continue">We\'re happy to see you. Please login to continue.</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login">Login</string>
    <string name="or_continue_with">or continue with</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="great">Great!</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="by_clicking_agree_and_continue_below_i_agree_to_terms_of_service_and_privacy_policy">By clicking Agree and continue below, I agree to Terms of Service and Privacy Policy</string>
    <string name="phone_number">Phone Number</string>
    <string name="we_re_so_excited_to_get_you_onboard">We\'re so excited to get you onboard!</string>
    <string name="googleicon">googleicon</string>
    <string name="appleicon">appleicon</string>
    <string name="facebookicon">facebookicon</string>
    <string name="home">Home</string>
    <string name="search">search</string>
    <string name="post">post</string>
    <string name="profile">profile</string>
    <string name="contacts">Contacts\n</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="phone_number1">Phone Number</string>
    <string name="back_arrow">backr</string>
</resources>